Changed the path to the picture files

--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
               <button class="btn btn-success" type="button">Learn More</button>
             </div>
             <div class="about-img">
-              <img src="/img/about/img_devices.png" alt="Devices" />
+              <img src="./img/about/img_devices.png" alt="Devices" />
             </div>
           </div>
         </section>
@@ -280,7 +280,7 @@
                   <!-- splide__slide 1 -->
                   <div
                     class="splide__slide"
-                    data-splide-html-video="/img/testimonials/videoplayback.mp4"
+                    data-splide-html-video="./img/testimonials/videoplayback.mp4"
                   >
                     <div class="splide-slide-container position-relative">
                       <div class="splide-container-inner">
@@ -288,7 +288,7 @@
                           class="splide__slide__container splide__slide__container--has-video"
                         >
                           <img
-                            src="/img/testimonials/preview1.jpg"
+                            src="./img/testimonials/preview1.jpg"
                             alt="Preview 1"
                           />
                         </div>
@@ -310,7 +310,7 @@
                   <!-- splide__slide 2 -->
                   <div
                     class="splide__slide"
-                    data-splide-html-video="/img/testimonials/videoplayback.mp4"
+                    data-splide-html-video="./img/testimonials/videoplayback.mp4"
                   >
                     <div class="splide-slide-container position-relative">
                       <div class="splide-container-inner">
@@ -318,7 +318,7 @@
                           class="splide__slide__container splide__slide__container--has-video"
                         >
                           <img
-                            src="/img/testimonials/preview2.jpg"
+                            src="./img/testimonials/preview2.jpg"
                             alt="Preview 2"
                           />
                         </div>
@@ -340,7 +340,7 @@
                   <!-- splide__slide 3 -->
                   <div
                     class="splide__slide"
-                    data-splide-html-video="/img/testimonials/videoplayback.mp4"
+                    data-splide-html-video="./img/testimonials/videoplayback.mp4"
                   >
                     <div class="splide-slide-container position-relative">
                       <div class="splide-container-inner">
@@ -348,7 +348,7 @@
                           class="splide__slide__container splide__slide__container--has-video"
                         >
                           <img
-                            src="/img/testimonials/preview3.jpg"
+                            src="./img/testimonials/preview3.jpg"
                             alt="Preview 3"
                           />
                         </div>
@@ -472,7 +472,7 @@
       <!-- ========= footer ========= -->
       <footer class="footer">
         <div class="logo text-center">
-          <img src="/img/Logo.svg" alt="Logo" />
+          <img src="./img/Logo.svg" alt="Logo" />
         </div>
         <nav class="nav">
           <ul class="navbar-nav d-flex flex-row">
